--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 
 
+
+
 PORT=5000
 DB_USER=igorbastos
 DB_PASSWORD=Zu7PQRggzvIunPhR
+DB_CLUSTER=cluster0.5p2vu.mongodb.net
+DB_NAME=projeto_integrador   
