--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,12 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - .:/app
-      - /app/node_modules
+      - .:/Diagnosoft_API
+      # - /Diagnosoft_API/node_modules
     env_file:
       - .env
     environment:
       - NODE_ENV=development
+      - CHOKIDAR_USEPOLLING=true
     command: npm run dev
     restart: unless-stopped
